fix Gradle build