@@ -1,9 +1,23 @@
+plugins {
+    id 'java'
+    id 'com.jfrog.bintray' version '1.8.1'
+    id 'maven-publish'
+}
+
+ext{
+    bintrayUser = System.getProperty("bintray.user")
+    bintrayKey = System.getProperty("bintray.key")
+    buildNumber = System.getProperty("build.number")
+}
+
 apply plugin: 'java'
 apply plugin: 'java-library'
+apply plugin: 'maven-publish'
+apply plugin: 'com.jfrog.bintray'
 
 group = 'dev.stratospheric'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '14'
+sourceCompatibility = '13'
 
 repositories {
     mavenLocal()
@@ -16,79 +30,98 @@ ext {
 }
 
 dependencies {
-    implementation "software.amazon:core:$cdkVersion"
-    implementation "software.amazon:ec2:$cdkVersion"
-    implementation "software.amazon:elasticloadbalancingv2:$cdkVersion"
-    implementation "software.amazon:autoscaling:$cdkVersion"
-    implementation "software.amazon:rds:$cdkVersion"
-    implementation "software.amazon:secretsmanager:$cdkVersion"
-    implementation "software.amazon:ecr:$cdkVersion"
-    implementation "software.amazon:iam:$cdkVersion"
-    implementation "software.amazon:ecs:$cdkVersion"
-    implementation "software.amazon:ssm:$cdkVersion"
+    implementation "software.amazon.awscdk:core:$cdkVersion"
+    implementation "software.amazon.awscdk:ec2:$cdkVersion"
+    implementation "software.amazon.awscdk:elasticloadbalancingv2:$cdkVersion"
+    implementation "software.amazon.awscdk:autoscaling:$cdkVersion"
+    implementation "software.amazon.awscdk:rds:$cdkVersion"
+    implementation "software.amazon.awscdk:secretsmanager:$cdkVersion"
+    implementation "software.amazon.awscdk:ecr:$cdkVersion"
+    implementation "software.amazon.awscdk:iam:$cdkVersion"
+    implementation "software.amazon.awscdk:ecs:$cdkVersion"
+    implementation "software.amazon.awscdk:ssm:$cdkVersion"
 }
 
-test {
-    useJUnitPlatform {
-        excludeTags "SqsTest", "PostgreSQLTest" // excluding tests relying on docker for the "test" target
-        if (System.getProperty("ci") == "true") {
-            excludeTags "IgnoreInCi"
+task sourcesJar(type: Jar, dependsOn: classes) {
+    classifier = 'sources'
+    from sourceSets.main.allSource
+}
+
+javadoc.failOnError = false
+task javadocJar(type: Jar, dependsOn: javadoc) {
+    classifier = 'javadoc'
+    from javadoc.destinationDir
+}
+
+artifacts {
+    archives sourcesJar
+    archives javadocJar
+}
+
+def pomConfig = {
+    licenses {
+        license {
+            name "MIT"
+            url "https://opensource.org/licenses/MIT"
+            distribution "repo"
         }
     }
-    jvmArgs '--enable-preview'
-    systemProperty "aws.accessKeyId", "foo" // dummy AWS credentials because the AWS SDK complains otherwise
-    systemProperty "aws.secretKey", "foo"   // dummy AWS credentials because the AWS SDK complains otherwise
-    testLogging {
-        showStackTraces = true
-        exceptionFormat = 'full'
-    }
-}
-
-task integrationTest(type: Test) {
-    useJUnitPlatform {
-        includeTags "PostgreSQLTest", "SqsTest"
-        if (System.getProperty("ci").equals("true")) {
-            excludeTags "IgnoreInCi"
+    developers {
+        developer {
+            id "thombergs"
+            name "Tom Hombergs"
+            email "tom.hombergs@gmail.com"
         }
     }
-    jvmArgs '--enable-preview'
-    systemProperty "aws.accessKeyId", "foo" // dummy AWS credentials because the AWS SDK complains otherwise
-    systemProperty "aws.secretKey", "foo"   // dummy AWS credentials because the AWS SDK complains otherwise
-    testLogging {
-        showStackTraces = true
-        exceptionFormat = 'full'
+
+    scm {
+        url "https://github.com/stratospheric-dev/cdk-constructs"
     }
 }
 
-tasks.withType(JavaCompile) {
-    options.compilerArgs.add("--enable-preview")
-}
-
-tasks.named("check") {
-    dependsOn integrationTest
-}
-
-test.finalizedBy jacocoTestReport
-integrationTest.finalizedBy jacocoTestReport
-
-spotless {
-    format 'html', {
-        target 'src/main/**/*.html'
-        prettier()
-    }
-    java {
-        googleJavaFormat('1.8').aosp()
-    }
-    kotlin {
-        ktlint()   // has its own section below
-    }
-}
-
-spotbugsMain {
-    reports {
-        xml.enabled = false
-        html.enabled = true
+publishing {
+    publications {
+        mavenPublication(MavenPublication) {
+            from components.java
+            artifact sourcesJar {
+                classifier "sources"
+            }
+            artifact javadocJar {
+                classifier "javadoc"
+            }
+            groupId 'dev.stratospheric'
+            artifactId project.name
+            version project.version
+            pom.withXml {
+                def root = asNode()
+                root.appendNode('description', 'A collection of CDK constructs to deploy an application on AWS.')
+                root.appendNode('name', 'cdk-constructs')
+                root.appendNode('url', 'https://github.com/stratospheric-dev/cdk-constructs')
+                root.children().last() + pomConfig
+            }
+        }
     }
 }
 
-build.dependsOn('spotlessCheck')
+bintray {
+    user = bintrayUser
+    key = bintrayKey
+    publications = ['mavenPublication']
+
+    pkg {
+        repo = 'maven-releases'
+        name = 'cdk-constructs'
+        userOrg = 'stratospheric'
+        licenses = ['MIT']
+        vcsUrl = 'https://github.com/stratospheric-dev/cdk-constructs'
+        version {
+            name = project.version
+            desc = "build ${buildNumber}"
+            released  = new Date()
+        }
+    }
+
+    publish = true
+}
+
+
